--- a/src/vista/PantallaAdministrador.form
+++ b/src/vista/PantallaAdministrador.form
@@ -2563,6 +2563,9 @@
                       <Properties>
                         <Property name="text" type="java.lang.String" value="INSERTAR PEL&#xcd;CULA"/>
                       </Properties>
+                      <AuxValues>
+                        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+                      </AuxValues>
                     </Component>
                     <Component class="javax.swing.JTextField" name="jTextField49">
                       <AuxValues>
